snippets/camunda-bpm-kubernetes/generated-manifest.yaml
## WARNING: Generated by Kustomize @d44083b4b19593aea2bdf5fe4fcb1fa59b0cbb8d
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/env: demo
  name: camunda-bpm-demo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: platform
    app.kubernetes.io/env: demo
  name: camunda-bpm
  namespace: camunda-bpm-demo
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/component: platform
    app.kubernetes.io/env: demo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: platform
    app.kubernetes.io/env: demo
  name: camunda-bpm
  namespace: camunda-bpm-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: platform
      app.kubernetes.io/env: demo
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/app: camunda-bpm
        app.kubernetes.io/component: platform
        app.kubernetes.io/env: demo
    spec:
      containers:
      - image: gcr.io/camunda-cloud-240911/camunda-bpm-k8s-demo:latest
        livenessProbe:
          httpGet:
            path: /camunda
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
        name: camunda-bpm
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9404
          name: metrics
        readinessProbe:
          httpGet:
            path: /camunda
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
        volumeMounts:
        - mountPath: /etc/config/
          name: config
      volumes:
      - configMap:
          defaultMode: 484
          name: config-f876fcdt56
        name: config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-cluster
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/component: platform
    app.kubernetes.io/env: demo
  name: camunda-bpm
  namespace: camunda-bpm-demo
spec:
  rules:
  - host: camunda-bpm.example.com
    http:
      paths:
      - backend:
          serviceName: camunda-bpm
          servicePort: http
        path: /
  tls:
  - hosts:
    - camunda-bpm.example.com
    secretName: camunda-bpm.example.com-tls
